; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/platforms/cell/spufs/extr_switch.c_save_csa.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/platforms/cell/spufs/extr_switch.c_save_csa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spu_state = type { i32 }
%struct.spu = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.spu_state*, %struct.spu*)* @save_csa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @save_csa(%struct.spu_state* %0, %struct.spu* %1) #0 {
  %3 = alloca %struct.spu_state*, align 8
  %4 = alloca %struct.spu*, align 8
  store %struct.spu_state* %0, %struct.spu_state** %3, align 8
  store %struct.spu* %1, %struct.spu** %4, align 8
  %5 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %6 = load %struct.spu*, %struct.spu** %4, align 8
  %7 = call i32 @save_mfc_queues(%struct.spu_state* %5, %struct.spu* %6)
  %8 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %9 = load %struct.spu*, %struct.spu** %4, align 8
  %10 = call i32 @save_ppu_querymask(%struct.spu_state* %8, %struct.spu* %9)
  %11 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %12 = load %struct.spu*, %struct.spu** %4, align 8
  %13 = call i32 @save_ppu_querytype(%struct.spu_state* %11, %struct.spu* %12)
  %14 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %15 = load %struct.spu*, %struct.spu** %4, align 8
  %16 = call i32 @save_ppu_tagstatus(%struct.spu_state* %14, %struct.spu* %15)
  %17 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %18 = load %struct.spu*, %struct.spu** %4, align 8
  %19 = call i32 @save_mfc_csr_tsq(%struct.spu_state* %17, %struct.spu* %18)
  %20 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %21 = load %struct.spu*, %struct.spu** %4, align 8
  %22 = call i32 @save_mfc_csr_cmd(%struct.spu_state* %20, %struct.spu* %21)
  %23 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %24 = load %struct.spu*, %struct.spu** %4, align 8
  %25 = call i32 @save_mfc_csr_ato(%struct.spu_state* %23, %struct.spu* %24)
  %26 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %27 = load %struct.spu*, %struct.spu** %4, align 8
  %28 = call i32 @save_mfc_tclass_id(%struct.spu_state* %26, %struct.spu* %27)
  %29 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %30 = load %struct.spu*, %struct.spu** %4, align 8
  %31 = call i32 @set_mfc_tclass_id(%struct.spu_state* %29, %struct.spu* %30)
  %32 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %33 = load %struct.spu*, %struct.spu** %4, align 8
  %34 = call i32 @save_mfc_cmd(%struct.spu_state* %32, %struct.spu* %33)
  %35 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %36 = load %struct.spu*, %struct.spu** %4, align 8
  %37 = call i32 @purge_mfc_queue(%struct.spu_state* %35, %struct.spu* %36)
  %38 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %39 = load %struct.spu*, %struct.spu** %4, align 8
  %40 = call i32 @wait_purge_complete(%struct.spu_state* %38, %struct.spu* %39)
  %41 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %42 = load %struct.spu*, %struct.spu** %4, align 8
  %43 = call i32 @setup_mfc_sr1(%struct.spu_state* %41, %struct.spu* %42)
  %44 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %45 = load %struct.spu*, %struct.spu** %4, align 8
  %46 = call i32 @save_spu_npc(%struct.spu_state* %44, %struct.spu* %45)
  %47 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %48 = load %struct.spu*, %struct.spu** %4, align 8
  %49 = call i32 @save_spu_privcntl(%struct.spu_state* %47, %struct.spu* %48)
  %50 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %51 = load %struct.spu*, %struct.spu** %4, align 8
  %52 = call i32 @reset_spu_privcntl(%struct.spu_state* %50, %struct.spu* %51)
  %53 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %54 = load %struct.spu*, %struct.spu** %4, align 8
  %55 = call i32 @save_spu_lslr(%struct.spu_state* %53, %struct.spu* %54)
  %56 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %57 = load %struct.spu*, %struct.spu** %4, align 8
  %58 = call i32 @reset_spu_lslr(%struct.spu_state* %56, %struct.spu* %57)
  %59 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %60 = load %struct.spu*, %struct.spu** %4, align 8
  %61 = call i32 @save_spu_cfg(%struct.spu_state* %59, %struct.spu* %60)
  %62 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %63 = load %struct.spu*, %struct.spu** %4, align 8
  %64 = call i32 @save_pm_trace(%struct.spu_state* %62, %struct.spu* %63)
  %65 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %66 = load %struct.spu*, %struct.spu** %4, align 8
  %67 = call i32 @save_mfc_rag(%struct.spu_state* %65, %struct.spu* %66)
  %68 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %69 = load %struct.spu*, %struct.spu** %4, align 8
  %70 = call i32 @save_ppu_mb_stat(%struct.spu_state* %68, %struct.spu* %69)
  %71 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %72 = load %struct.spu*, %struct.spu** %4, align 8
  %73 = call i32 @save_ppu_mb(%struct.spu_state* %71, %struct.spu* %72)
  %74 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %75 = load %struct.spu*, %struct.spu** %4, align 8
  %76 = call i32 @save_ppuint_mb(%struct.spu_state* %74, %struct.spu* %75)
  %77 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %78 = load %struct.spu*, %struct.spu** %4, align 8
  %79 = call i32 @save_ch_part1(%struct.spu_state* %77, %struct.spu* %78)
  %80 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %81 = load %struct.spu*, %struct.spu** %4, align 8
  %82 = call i32 @save_spu_mb(%struct.spu_state* %80, %struct.spu* %81)
  %83 = load %struct.spu_state*, %struct.spu_state** %3, align 8
  %84 = load %struct.spu*, %struct.spu** %4, align 8
  %85 = call i32 @reset_ch(%struct.spu_state* %83, %struct.spu* %84)
  ret void
}

declare dso_local i32 @save_mfc_queues(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_ppu_querymask(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_ppu_querytype(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_ppu_tagstatus(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_mfc_csr_tsq(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_mfc_csr_cmd(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_mfc_csr_ato(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_mfc_tclass_id(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @set_mfc_tclass_id(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_mfc_cmd(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @purge_mfc_queue(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @wait_purge_complete(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @setup_mfc_sr1(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_spu_npc(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_spu_privcntl(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @reset_spu_privcntl(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_spu_lslr(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @reset_spu_lslr(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_spu_cfg(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_pm_trace(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_mfc_rag(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_ppu_mb_stat(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_ppu_mb(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_ppuint_mb(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_ch_part1(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @save_spu_mb(%struct.spu_state*, %struct.spu*) #1

declare dso_local i32 @reset_ch(%struct.spu_state*, %struct.spu*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
